  doesn't sleep by checking that the latency of this call is less than 10sec (Alex Shraer via camille)
  
  ZOOKEEPER-1351. invalid test verification in MultiTransactionTest (phunt via camille)

  ZOOKEEPER-973. bind() could fail on Leader because it does not
  setReuseAddress on its ServerSocket (Harsh J via phunt)

Release 3.4.2 - 2011-12-21

Backward compatible changes:

BUGFIXES: 

  ZOOKEEPER-1323. c client doesn't compile on freebsd
  (michi mutsuzaki via phunt)

  ZOOKEEPER-1333. NPE in FileTxnSnapLog when restarting a cluster.
  (Patrick Hunt and Andrew Mc Nair via mahadev)

Release 3.4.1 - 2011-12-12

Backward compatible changes:

BUGFIXES: 

  ZOOKEEPER-1311. ZooKeeper test jar is broken (Ivan Kelly via phunt)

  ZOOKEEPER-1305. zookeeper.c:prepend_string func can dereference null ptr.
  (Daniel Lescohier via mahadev)

  ZOOKEEPER-1316. zookeeper_init leaks memory if chroot is just '/'.
  (Akira Kitada via mahadev)

  ZOOKEEPER-1315. zookeeper_init always reports sessionPasswd=<hidden>.
  (Akira Kitada via mahadev)

  ZOOKEEPER-1317. Possible segfault in zookeeper_init. 
  (Akira Kitada via mahadev)

  ZOOKEEPER-1319. Missing data after restarting+expanding a cluster.
  (Patrick Hunt and Ben Reed via mahadev)

  ZOOKEEPER-1269. Multi deserialization issues (Camille Fournier via 
  mahadev)

Release 3.4.0 - 2011-10-25

Non-backward compatible changes:

BUGFIXES: 

Backward compatible changes:

BUGFIXES: 

  ZOOKEEPER-735. cppunit test testipv6 assumes that the machine is ipv6
  enabled. (mahadev)

  ZOOKEEPER-720. Use zookeeper-{version}-sources.jar instead of
  zookeeper-{version}-src.jar to publish sources in the Maven repository
  (paolo via phunt)

  ZOOKEEPER-722. zkServer.sh uses sh's builtin echo on BSD, behaves
  incorrectly. (Ivan Kelly via phunt)

  ZOOKEEPER-741. root level create on REST proxy fails (phunt)

  ZOOKEEPER-631. zkpython's C code could do with a style clean-up
  (henry robinson via phunt)
  